Bug #5397: Crash with varchar binary and LIKE